k8s/yaml/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'web'
  namespace: 'uptime'
spec:
  ports:
  - name: openresty
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: 'uptime'
  sessionAffinity: None
  type: ClusterIP
